--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@astrojs/partytown": "^2.1.4",
-    "astro": "^5.16.4"
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.16.4",
+    "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19"
   }
 }
