--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,38 +1,11 @@
 #these below configs were according to decap cms docs, for now I am using decapcmsbridge, you can add your own backend for auth
 
-# Use DecapBridge PKCE auth (required)
+
 backend:
-  name: git-gateway
-  repo: trickytube/trickytube
+  name: github
+  repo: trickytube/trickytube.github.io
   branch: main
-  auth_type: pkce
-  base_url: https://auth.decapbridge.com
-  auth_endpoint: /sites/c2b336e5-caa5-4206-9b42-286143d05812/pkce
-  auth_token_endpoint: /sites/c2b336e5-caa5-4206-9b42-286143d05812/token
-  gateway_url: https://gateway.decapbridge.com
-
-  # See who did what (optional)
-  commit_messages:
-    create: Create {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    update: Update {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    delete: Delete {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    uploadMedia: Upload “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    deleteMedia: Delete “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    openAuthoring: Message {{message}} - {{author-name}} <{{author-login}}> via DecapBridge
-
-# Enable PKCE fields (optional, recommended)
-auth:
-  email_claim: email
-  first_name_claim: first_name
-  last_name_claim: last_name
-  avatar_url_claim: avatar_url
-
-# Better Decap + Bridge logo (optional)
-logo_url: https://decapbridge.com/decapcms-with-bridge.svg
-
-# Add site links in Decap CMS (optional)
-site_url: https://trickytube.com
-
+  use_graphql: true
 
 
 
