changed repo url on decapbridge config

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,7 +3,7 @@
 # Use DecapBridge PKCE auth (required)
 backend:
   name: git-gateway
-  repo: trickytube/trickytube
+  repo: trickytube/trickytube.github.io
   branch: main
   auth_type: pkce
   base_url: https://auth.decapbridge.com
